# 3d_circle_estimation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
algorithm/: algorithm.cpp  algorithm.hpp  extract_normals.hpp
data/: teapot.hpp
geometry/: Circle3D.hpp  Ellipse2D.cpp  Ellipse2D.hpp  QuadraticForm.hpp  Segment3D.hpp  Vector2.hpp
gui/: MyApp.cpp  MyApp.hpp  MyCanvas.cpp  MyCanvas.hpp  MyFrame.cpp  MyFrame.hpp
render/: Renderer.cpp  Renderer.hpp  Screen.hpp
test/: Test.cpp
utility/: random_num_generator.cpp  random_num_generator.hpp  utility.cpp  utility.hpp
