CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(3D_Circle_Estimation)

AUX_SOURCE_DIRECTORY(./algorithm SOURCES)
AUX_SOURCE_DIRECTORY(./geometry SOURCES)
AUX_SOURCE_DIRECTORY(./gui SOURCES)
AUX_SOURCE_DIRECTORY(./render SOURCES)
AUX_SOURCE_DIRECTORY(./utility SOURCES)
AUX_SOURCE_DIRECTORY(./data SOURCES)


SET(CMAKE_BUILD_TYPE Debug)
ADD_DEFINITIONS(-std=c++11)

FIND_PACKAGE(Eigen3 3.3 REQUIRED NO_MODULE)


FIND_PACKAGE(wxWidgets REQUIRED core)
IF(wxWidgets_FOUND)
	INCLUDE(${wxWidgets_USE_FILE})
ELSE()
    MESSAGE(FATAL_ERROR "wxWidgets is not found!")
ENDIF(wxWidgets_FOUND)


FIND_PACKAGE(Ceres 1.8.0 REQUIRED)
IF(Ceres_FOUND)
    INCLUDE_DIRECTORIES(${CERES_INCLUDE_DIRS})
ELSE()
    MESSAGE(FATAL_ERROR "Ceres solver is not found!S")
ENDIF(Ceres_FOUND)
		     
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${wxWidgets_LIBRARIES} ${CERES_LIBRARIES} Eigen3::Eigen)

